--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: webzhiyi
+title: 网之易
 brief-intro: PHP Dev Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://webzhiyi.github.io" # the base hostname & protocol for your site
